--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -116,7 +116,7 @@
     const SITE_LIST = [
       ['google', ''],
       ['youtube', ''],
-      ['twitter', 'twitter.com/google'],
+      ['geeksforgeeks', 'www.geeksforgeeks.org/data-structures/'],
       ['flickr', ''],
       ['quora', 'www.quora.com/topic/JavaScript-programming-language'],
       ['twitch', 'www.twitch.tv/'],
