--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -116,15 +116,9 @@
     const SITE_LIST = [
       ['google', ''],
       ['youtube', ''],
+      ['gist', 'www.github.com/yoyling/'],
       ['geeksforgeeks', 'www.geeksforgeeks.org/data-structures/'],
-      ['flickr', ''],
-      ['quora', 'www.quora.com/topic/JavaScript-programming-language'],
-      ['twitch', 'www.twitch.tv/'],
-      ['reddit', ''],
       ['wiki', 'zh.wikipedia.org/'],
-      ['gist', 'gist.github.com/'],
-      ['facebook', 'facebook.com/Google/'],
-      ['blogger', ''],
     ]
 
     function showIcons() {
