--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -7,19 +7,71 @@
   <base target="_blank">
   <style>
     body {
-      padding: 0 0.5em;
+      padding: 61px 0.5em;
+      text-align: center;
     }
     .box {
       margin-top: 1em;
     }
+
+    #selNode {
+      width: 40%;
+      height: 34px;
+      padding: 6px 12px;
+      font-size: 14px;
+      line-height: 1.42857143;
+      color: #555;
+      background-color: #fff;
+      background-image: none;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+      box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+      -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+      -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+      transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    }
+
     #txtURL {
-      width: 100%;
-      height: 2em;
-      text-indent: 0.5em;
-      padding: 0.25em 0;
+      width: 68%;
+      height: 34px;
+      padding: 6px 12px;
+      font-size: 16px;
+      line-height: 1.42857143;
+      color: #555;
+      background-color: #fff;
+      background-image: none;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+      box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+      -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+      -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+      transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     }
     #btnGo {
-      width: 100%;
+      color: #fff;
+      background-color: #5bc0de;
+      border-color: #46b8da;
+      display: inline-block;
+      padding: 6px 12px;
+      margin-bottom: 0;
+      font-weight: 400;
+      line-height: 1.42857143;
+      text-align: center;
+      white-space: nowrap;
+      vertical-align: middle;
+      -ms-touch-action: manipulation;
+      touch-action: manipulation;
+      cursor: pointer;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      background-image: none;
+      border: 1px solid transparent;
+      border-radius: 4px;
+      width: 70%;
       font-size: 1.5em;
     }
     #list a {
@@ -35,7 +87,6 @@
     <button id="btnGo">Go</button>
   </div>
   <div class="box">
-    <span>切换线路:</span>
     <select id="selNode"></select>
   </div>
   <div class="box" id="list">
