--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -88,7 +88,7 @@
     <button id="btnGo">Go</button>
   </div>
   <div class="box">
-    <select id="selNode"></select>
+    <!--<select id="selNode"></select>-->
   </div>
   <div class="box" id="list">
   </div>
