--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -168,7 +168,7 @@
     const SITE_LIST = [
       ['google', ''],
       ['youtube', ''],
-      ['gist', 'www.github.com/yoyling/'],
+      ['gist', 'www.github.com/rawchen/'],
       ['geeksforgeeks', 'www.geeksforgeeks.org/data-structures/'],
       ['wiki', 'zh.wikipedia.org/'],
     ]
